fixing text spacing

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ footer {
 
 section {
   max-width: 100%;
-  padding: 2rem;
+  padding: 1rem;
   margin-bottom: 2rem;
 }
 
